--- a/index.html
+++ b/index.html
@@ -238,10 +238,10 @@
                 <div class="col-lg-3 col-md-6 mobile ">
                     <div class="team card position-relative overflow-hidden border-0 mb-5">
                         <img class="card-img-top" src="img/team-1.png" alt="PORT IMAGE">
-                        <div class="card-body text-center p-0">
+                        <div class="card-body text-center p-0 ">
                             <div class="team-text d-flex flex-column justify-content-center bg-secondary">
-                                <h5 class="font-weight-bold">Salmanul Fariz</h5>
-                                <span>Managing director</span>
+                                <h5 class="font-weight-bold smalll">Salmanul Fariz</h5>
+                                <span class="smallll">Managing director</span>
                             </div>
                             <div class="team-social d-flex align-items-center justify-content-center bg-primary">
                                 <!-- <a class="btn btn-outline-dark btn-social mr-2" href="#"><i
@@ -260,10 +260,10 @@
                         <img class="card-img-top" src="img/2.png" alt="PORT IMAGE">
                         <div class="card-body text-center p-0 mobile1">
                             <div class="team-text d-flex flex-column justify-content-center bg-secondary">
-                                <h5 class="font-weight-bold">Sinan Abdulatif</h5>
-                                <span>Director & Founder</span>
+                                <h5 class="font-weight-bold smalll">Sinan Abdulatif</h5>
+                                <span class="smallll">Director & Founder</span>
                             </div>
-                            <div class="team-social d-flex align-items-center justify-content-center bg-primary">
+                            <div class="team-social d-flex align-items-center justify-content-center bg-primary ">
                                 <!-- <a class="btn btn-outline-dark btn-social mr-2" href="#"><i
                                         class="fab fa-twitter"></i></a> -->
                                 <a class="btn btn-outline-dark btn-social mr-2" href="#"><i
@@ -280,8 +280,8 @@
                         <img class="card-img-top" src="img/3.png" alt="PORT IMAGE">
                         <div class="card-body text-center p-0">
                             <div class="team-text d-flex flex-column justify-content-center bg-secondary">
-                                <h5 class="font-weight-bold">Rimshad</h5>
-                                <span>Director & CEO</span>
+                                <h5 class="font-weight-bold smalll">Rimshad</h5>
+                                <span class="smallll">Director & CEO</span>
                             </div>
                             <div class="team-social d-flex align-items-center justify-content-center bg-primary">
                                 <!-- <a class="btn btn-outline-dark btn-social mr-2" href="#"><i
