--- a/service.html
+++ b/service.html
@@ -36,7 +36,7 @@
         <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-lg-5">
             <a href="index.html" class="navbar-brand ml-lg-3">
                 <h1 class="m-0 display-5 text-uppercase text-primary">
-                    <img src="/portexim.png" alt="port logo" style="height: 50px;">
+                    <img src="img/portexim.png" alt="port logo" style="height: 50px;">
                 </h1>
             </a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
