--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 mx-auto mobile">
-                    <div class="team card position-relative overflow-hidden border-0 mb-5">
+                    <div class="team card position-relative overflow-hidden border-0 ">
                         <img class="card-img-top" src="img/2.png" alt="PORT IMAGE">
                         <div class="card-body text-center p-0 mobile1">
                             <div class="team-text d-flex flex-column justify-content-center bg-secondary">
