--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                         <p><i class="fa fa-map-marker-alt mr-2"></i>1st Floor, CC 54, 2593-5, Bose Nagar,
                             Kadavanthara, Kochi, Kerala – 682020</p>
                         <p><i class="fa fa-phone-alt mr-2"></i>+91 9061 917 719</p>
-                        <p><i class="fa fa-envelope mr-2"></i>porteximpvtltd@gmail.com</p>
+                        <p><i class="fa fa-envelope mr-2"></i>info@portexim.in</p>
                         <div class="d-flex justify-content-start mt-4">
                             <!-- <a class="btn btn-outline-light btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a> -->
                             <a class="btn btn-outline-light btn-social mr-2" href="#"><i
