--- a/service.html
+++ b/service.html
@@ -79,22 +79,18 @@
                 <div class="col-lg-3 col-md-6 text-center mb-5">
                     <div class="d-flex align-items-center justify-content-center bg-primary mb-4 p-4">
                         <i class="fa fa-2x fa-seedling text-dark pr-3"></i>
-                        <h6 class="text-white font-weight-medium m-0">Millets</h6>
+                        <h6 class="text-white font-weight-medium m-0">Metal Scrap</h6>
                     </div>
-                    <p>Millets, known for their nutritional value and environmental sustainability, are at the heart of
-                        our
-                        export-import portfolio. We source the finest millets to promote healthier choices worldwide.
+                    <p>We import high-quality metal scrap from trusted global sources, ensuring sustainable materials for recycling and industrial use.
                     </p>
                     <!-- <a class="border-bottom text-decoration-none" href="">Read More</a> -->
                 </div>
                 <div class="col-lg-3 col-md-6 text-center mb-5">
                     <div class="d-flex align-items-center justify-content-center bg-primary mb-4 p-4">
                         <i class="fa fa-2x fa-utensils text-dark pr-3"></i>
-                        <h6 class="text-white font-weight-medium m-0">Frozen French Fries</h6>
+                        <h6 class="text-white font-weight-medium m-0">Packaging Materials</h6>
                     </div>
-                    <p>Our export-import expertise extends to frozen French fries, a favorite snack for people around
-                        the
-                        world. We deliver top-quality French fries to satisfy appetites globally.</p>
+                    <p>We export durable packaging materials, providing reliable solutions for protecting goods during transit and storage across international markets.</p>
                     <!-- <a class="border-bottom text-decoration-none" href="">Read More</a> -->
                 </div>
                 <div class="col-lg-3 col-md-6 text-center mb-5">
